--- a/cmd/email-provider/Dockerfile
+++ b/cmd/email-provider/Dockerfile
@@ -18,12 +18,12 @@ RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 \
 RUN addgroup -S cedille-group && \
     adduser -S cedille-user -G cedille-group
 
-ENV FROM_EMAIL_ADDRESS=$FROM_EMAIL_ADDRESS
-ENV FROM_NAME=$FROM_NAME
-ENV TO_NAME=$TO_NAME
-ENV TO_EMAIL_ADDRESS=$TO_EMAIL_ADDRESS
-ENV SENDGRID_API_KEY=$SENDGRID_API_KEY
-ENV SUBJECT=$SUBJECT
+ENV EMAIL_FROM_ADDRESS=$EMAIL_FROM_ADDRESS
+ENV EMAIL_FROM_NAME=$EMAIL_FROM_NAME
+ENV EMAIL_NAME_TO=$EMAIL_NAME_TO
+ENV EMAIL_TO_ADDRESS=$EMAIL_TO_ADDRESS
+ENV EMAIL_SENDGRID_API_KEY=$EMAIL_SENDGRID_API_KEY
+ENV EMAIL_SUBJECT=$EMAIL_SUBJECT
 
 # Step 2 - import necessary files to run program.
 FROM scratch
