minor(db): Database setup, models, SQL scripts (#32)
* Generated models using sqlboiler.

* Added sql config, docker-compose postgres

* Updated dependencies

* Added sql commands into makefile

* Moved db scripts to scripts/

* Added first migration to create tables

* Generated models using sqlboiler.

* Add sqlboiler config file.

* Add init SQL script

* Moved models to new folder.

* Added calidum pkg structure w microservices+db

* Adapt docker-compose with new db settings.

* Update flags of calidum rotae service to add db

* Add lib/pq package for db connection

* Adapt output of sqlboiler.

* Ran go mod tidy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,18 @@
 version: '3'
 
 services:
+  postgres:
+    image: postgres:14.1-alpine
+    restart: always
+    environment:
+      - POSTGRES_USER=cedille_user
+      - POSTGRES_PASSWORD=cedille_pwd
+    ports:
+      - '5432:5432'
+    volumes: 
+      - postgres:/var/lib/postgresql/data
+      - ./scripts/postgres/:/docker-entrypoint-initdb.d/
+
   email_provider:
     build:
       context: .
@@ -47,12 +59,20 @@ services:
     depends_on:
       - email_provider
       - discord_provider
+    environment:
+      DB_PASSWORD: cedille_pwd
     entrypoint: [
       "/calidum_rotae_service",
       "--port", "3000", 
       "--email_provider_port", "4000",
-      "--discord_provider_port", "5000"
+      "--discord_provider_port", "5000",
+      "--db-user", "cedille_user",
+      "--db-name", "calidum_rotae"
     ]
     
 networks:
   microservices:
+
+volumes:
+  postgres:
+    driver: local
