http endpoint and authentication
Added TLS support when dialing using gRPC

added docker-compose env var for each services

refactoring

error management

fixed json to rpc + rpc receiver function signature + grpc dependencies

docker-compose cmd + log message

Update CONTRIBUTING.md

--- a/cmd/calidum-rotae-service/Dockerfile
+++ b/cmd/calidum-rotae-service/Dockerfile
@@ -25,6 +25,13 @@ COPY --from=builder /etc/passwd /etc/passwd
 COPY --from=builder /app/calidum_rotae_service /calidum_rotae_service
 COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
 
+ENV DB_PASSWORD=$DB_PASSWORD
+ENV CALIDUM_ROTAE_SERVICE_API_KEY=$CALIDUM_ROTAE_SERVICE_API_KEY
+
+# Keep this value empty if you don't want to use TLS when dialing the microservices.
+# Otherwise, pass the path to the certificate file.
+ENV CERTIFICATE_FILE_PATH=$CERTIFICATE_FILE_PATH
+
 USER cedille-user
 
 ENTRYPOINT ["/calidum_rotae_service"]
