--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,6 @@
 version: '3'
 
 services:
-  postgres:
-    image: postgres:16.0-alpine
-    restart: always
-    environment:
-      - POSTGRES_USER=cedille_user
-      - POSTGRES_PASSWORD=cedille_pwd
-    ports:
-      - '5432:5432'
-    volumes: 
-      - postgres:/var/lib/postgresql/data
-      - ./scripts/postgres/:/docker-entrypoint-initdb.d/
-
   email_provider:
     build:
       context: .
@@ -75,14 +63,8 @@ services:
       "/calidum_rotae_service",
       "--port", "3000",
       "--discord_provider_port", "5000",
-      "--email_provider_port", "4000",
-      "--db-user", "cedille_user",
-      "--db-name", "calidum_rotae"
+      "--email_provider_port", "4000"
     ]
     
 networks:
   microservices:
-
-volumes:
-  postgres:
-    driver: local
