--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,11 +13,11 @@ services:
     networks:
       - microservices
     environment:
-      EMAIL_FROM_ADDRESS: email_from_address
-      EMAIL_FROM_NAME: email_from_name
-      EMAIL_NAME_TO: email_to_name
-      EMAIL_TO_ADDRESS: email_to_address
-      EMAIL_SUBJECT: email_subject
+      EMAIL_FROM_ADDRESS: thomas991234@gmail.com
+      EMAIL_FROM_NAME: calidum-rotae-service
+      EMAIL_NAME_TO: THOMAS
+      EMAIL_TO_ADDRESS: thomas991234@gmail.com
+      EMAIL_SUBJECT: CALIDUM-ROTAE-SERVICE
       EMAIL_SENDGRID_API_KEY: ${EMAIL_SENDGRID_API_KEY}
     entrypoint: [
       "/email_provider",
@@ -64,6 +64,8 @@ services:
       "--discord_provider_port", "5000",
       "--email_provider_port", "4000",
       "--enable_otel_tracing", "true",
+      "--otel_otlp_exporter_host", "localhost",
+      "--otel_otlp_exporter_port", "4318",
     ]
     
 networks:
