--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,12 +13,12 @@ services:
     networks:
       - microservices
     environment:
-      EMAIL_FROM_ADDRESS: email_from_address
-      EMAIL_FROM_NAME: email_from_name
-      EMAIL_NAME_TO: email_to_name
-      EMAIL_TO_ADDRESS: email_to_address
-      EMAIL_SUBJECT: email_subject
-      EMAIL_SENDGRID_API_KEY: email_sendgrid_api_key
+      EMAIL_FROM_ADDRESS: thomas991234@gmail.com
+      EMAIL_FROM_NAME: calidum-rotae-service
+      EMAIL_NAME_TO: THOMAS
+      EMAIL_TO_ADDRESS: thomas991234@gmail.com
+      EMAIL_SUBJECT: CALIDUM-ROTAE-SERVICE
+      EMAIL_SENDGRID_API_KEY: ${EMAIL_SENDGRID_API_KEY}
     entrypoint: [
       "/email_provider",
       "--port", "4000", 
@@ -36,7 +36,7 @@ services:
     networks:
       - microservices
     environment:
-      DISCORD_WEBHOOK_URL: discord_webhook
+      DISCORD_WEBHOOK_URL: ${DISCORD_WEBHOOK_URL}
     entrypoint: [
       "/discord_provider",
       "--port", "5000", 
@@ -57,13 +57,15 @@ services:
       - email_provider
       - discord_provider
     environment:
-      DB_PASSWORD: cedille_pwd
-      CALIDUM_ROTAE_SERVICE_API_KEY: 1234
+      CALIDUM_ROTAE_SERVICE_API_KEY: ${CALIDUM_ROTAE_SERVICE_API_KEY}
     entrypoint: [
       "/calidum_rotae_service",
       "--port", "3000",
       "--discord_provider_port", "5000",
-      "--email_provider_port", "4000"
+      "--email_provider_port", "4000",
+      "--enable_otel_tracing", "true",
+      "--otel_otlp_exporter_host", "localhost",
+      "--otel_otlp_exporter_port", "4318",
     ]
     
 networks:
