--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: ./cmd/${{ github.event.inputs.image }}
+          context: .
           file: ./cmd/${{ github.event.inputs.image }}/Dockerfile
           push: true
           tags: |
