--- a/cmd/discord-provider/Dockerfile
+++ b/cmd/discord-provider/Dockerfile
@@ -22,6 +22,7 @@ RUN addgroup -S cedille-group && \
 # Step 2 - import necessary files to run program.
 FROM scratch
 
+COPY --from=builder /bin/sh /bin/sh
 COPY --from=builder /etc/passwd /etc/passwd
 COPY --from=builder /app/discord_provider /discord_provider
 COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
