Changed scratch to alpine for final image (#81)
* added /bin/sh to dockerfiles

* changed scratch to alpine for final image

* removed unnecessary COPY from dockerfiles

--- a/cmd/discord-provider/Dockerfile
+++ b/cmd/discord-provider/Dockerfile
@@ -20,10 +20,8 @@ RUN addgroup -S cedille-group && \
     adduser -S cedille-user -G cedille-group
 
 # Step 2 - import necessary files to run program.
-FROM scratch
+FROM alpine
 
-COPY --from=builder /bin/sh /bin/sh
-COPY --from=builder /etc/passwd /etc/passwd
 COPY --from=builder /app/discord_provider /discord_provider
 COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
 
