--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -114,7 +114,7 @@ services:
       "--email_provider_port", "4000",
       "--otel_otlp_exporter_host", "otel-collector",
       "--otel_otlp_exporter_port", "4318",
-      "--allowed_domains", "http://localhost",
+      "--allowed_domains", "http://localhost*",
     ]
 
 volumes:
