--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,7 +67,7 @@ services:
       "--email_provider_port", "4000",
       "--otel_otlp_exporter_host", "localhost",
       "--otel_otlp_exporter_port", "4318",
-      "--allowed_domains", "http://localhost",
+      "--allowed_domains", "http://localhost*",
     ]
     
 networks:
