--- a/cmd/email-provider/Dockerfile
+++ b/cmd/email-provider/Dockerfile
@@ -26,6 +26,6 @@ ENV EMAIL_FROM_NAME=$EMAIL_FROM_NAME
 ENV EMAIL_NAME_TO=$EMAIL_NAME_TO
 ENV EMAIL_TO_ADDRESS=$EMAIL_TO_ADDRESS
 ENV EMAIL_SUBJECT=$EMAIL_SUBJECT
-ENV EMAIL_SENDGRID_API_KEY=$EMAIL_SENDGRID_API_KEY
+ENV EMAIL_SMTP_API_KEY=$EMAIL_SMTP_API_KEY
 
 ENTRYPOINT ["/email_provider"]
