--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,6 +58,13 @@ services:
       - discord_provider
     environment:
       CALIDUM_ROTAE_SERVICE_API_KEY: ${CALIDUM_ROTAE_SERVICE_API_KEY}
+      OTEL_SERVICE_NAME: "calidum"
+      OTEL_EXPORTER_OTLP_TRACES_ENDPOINT: "http://localhost:8080/v1/traces"
+      OTEL_EXPORTER_OTLP_LOGS_ENDPOINT: "http://localhost:8080/v1/logs"
+      OTEL_EXPORTER_OTLP_PROTOCOL: "http/protobuf"
+      OTEL_METRICS_EXPORTER: "none"
+      OTEL_EXPORTER_OTLP_HEADERS: "x-api-key=MLOCbjzBcZkPyKEl-1SZrWavAVfU2nlb"
+                        
     entrypoint: [
       "/calidum_rotae_service",
       "--port", "3000",
@@ -66,7 +73,7 @@ services:
       "--email_provider_hostname", "email_provider",
       "--email_provider_port", "4000",
       "--otel_otlp_exporter_host", "localhost",
-      "--otel_otlp_exporter_port", "4318",
+      "--otel_otlp_exporter_port", "8080",
       "--allowed_domains", "http://localhost*",
     ]
     
